--- a/src/qbsofthand_control/package.xml
+++ b/src/qbsofthand_control/package.xml
@@ -4,7 +4,7 @@
   <version>0.1.0</version>
   <description>ROS 2 package for interfacing with qbSoftHand API</description>
 
-  <maintainer email="673269043@qq.com">yulong</maintainer>
+  <maintainer email="673269043@qq.com">Evil_Eyes</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
